--- a/integrasjonspunkt-local.properties.dist
+++ b/integrasjonspunkt-local.properties.dist
@@ -1,8 +1,4 @@
-#Fyll inn lokale vedier der de mangler
-#navnet skal være: integrasjonspunkt-local.properties
-
-server.port=${SERVER_PORT}
-difi.move.org.number=${ORG_NUMBER}
+difi.move.org.number=${ORG_NR}
 
 # Virksomhetssertifikat 2021
 difi.move.org.keystore.alias=${KEYSTORE_ALIAS}
@@ -57,3 +53,7 @@ difi.activemq.broker-url=vm://localhost
 #difi.move.fiks.inn.mailOnError=false
 #difi.move.mail.enableAuth=false
 #difi.move.mail.trust=${difi.move.mail.smtpHost}
+
+# Port for innkommende kommunikasjon
+server.port=${SERVER_PORT}
+
