--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -73,4 +73,6 @@ EXPOSE 2222 9093
 WORKDIR ${APP_DIR}
 ARG profile=staging
 ENV SPRING_PROFILES_ACTIVE=${profile}
+ARG JAVA_OPTS="-Xmx2g"
+ENV JAVA_OPTS=${JAVA_OPTS}
 LABEL version "0.7"
