--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,8 +8,18 @@ RUN apt-get update && apt-get install -yq openssh-server nano ca-certificates cu
 
 # Installerer s6-overlay - https://github.com/just-containers/s6-overlay
 ARG S6_OVERLAY_VERSION="3.1.4.2"
-ADD s6_install.sh /
-RUN echo "ARCH = $TARGETARCH" && /s6_install.sh
+ARG TARGETARCH
+RUN echo "ARCH = $TARGETARCH" && \
+    echo "Installerer S6-overlay" && \
+    curl -Lso /tmp/s6-overlay-noarch.tar.xz  https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz && \
+    curl -Lso /tmp/s6-overlay-symlinks-noarch.tar.xz https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-symlinks-noarch.tar.xz && \
+    curl -Lso /tmp/s6-overlay-${TARGETARCH}.tar.xz https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-${TARGETARCH}.tar.xz && \
+    curl -Lso /tmp/s6-overlay-${TARGETARCH}.tar.xz https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-symlinks-${TARGETARCH}.tar.xz && \
+    tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz && \
+    tar -C / -Jxpf /tmp/s6-overlay-symlinks-noarch.tar.xz && \
+    tar -C / -Jxpf /tmp/s6-overlay-${TARGETARCH}.tar.xz && \
+    tar -C / -Jxpf /tmp/s6-overlay-symlinks-arch.tar.xz
+
 ENTRYPOINT ["/init"]
 
 # Oppsett for cacerts + oppretting av brukeren java
