--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -35,6 +35,10 @@ definitions:
           - echo "Oppretter passord på virksomhetssertifikatet"
           - openssl pkcs12 -in vs-auth.p12 -passin pass:$empty -nodes -out vs-auth.pem
           - openssl pkcs12 -export -in vs-auth.pem -out auth.p12 -passout pass:${KEYSTORE_PASS} -name ${KEYSTORE_ALIAS}
+          - echo "Finner versjonsnummer på siste versjon av integrasjonspunktet"
+          - curl -Lso maven-metadata.xml "https://repo1.maven.org/maven2/no/difi/meldingsutveksling/integrasjonspunkt/maven-metadata.xml"
+          - export APP_VERSION=$(sed -ne '/latest/{s/.*<latest>\(.*\)<\/latest>.*/\1/p;q;}' <<< cat maven-metadata.xml)
+          - echo "Bruker versjon ${APP_VERSION} av integrasjonspunktet"
           - curl -L https://depot.dev/install-cli.sh | DEPOT_INSTALL_DIR=/usr/local/bin sh
           - *registryLogin
           - depot bake --project ${DEPOT_PID} --push -f docker-bake.hcl ${APP_ENV}
