--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -39,6 +39,8 @@ definitions:
           - curl -Lso maven-metadata.xml "https://repo1.maven.org/maven2/no/difi/meldingsutveksling/integrasjonspunkt/maven-metadata.xml"
           - export APP_VERSION=$(sed -ne '/latest/{s/.*<latest>\(.*\)<\/latest>.*/\1/p;q;}' <<< cat maven-metadata.xml)
           - echo "Bruker versjon ${APP_VERSION} av integrasjonspunktet"
+          - S6_ver=$(curl -s https://api.github.com/repos/just-containers/s6-overlay/tags | jq -r '.[0].name')
+          - echo "Siste versjon av S6-overlay er ${S6_ver}"
           - curl -L https://depot.dev/install-cli.sh | DEPOT_INSTALL_DIR=/usr/local/bin sh
           - *registryLogin
           - depot bake --project ${DEPOT_PID} --push -f docker-bake.hcl ${APP_ENV}
